--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>liquibase-maven-plugin</artifactId>
             <version>4.23.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
